--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ fp-info-cache
 *.DS_Store
 Documentation/~$M SIMM Manual.docx
 ROMSIMM8MB.4402B/Documentation/Thumbs.db
+ROMSIMM2MB.4401A/Documentation/Thumbs.db
