--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ fp-info-cache
 Documentation/~$M SIMM Manual.docx
 ROMSIMM8MB.4402B/Documentation/Thumbs.db
 ROMSIMM2MB.4401A/Documentation/Thumbs.db
+ROMSIMM8MB.4402A/Documentation/Thumbs.db
