--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Documentation/~$M SIMM Manual.docx
 ROMSIMM8MB.4402B/Documentation/Thumbs.db
 ROMSIMM2MB.4401A/Documentation/Thumbs.db
 ROMSIMM8MB.4402A/Documentation/Thumbs.db
+Documentation/Thumbs.db
