--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ ROMSIMM8MB.4402B/Documentation/Thumbs.db
 ROMSIMM2MB.4401A/Documentation/Thumbs.db
 ROMSIMM8MB.4402A/Documentation/Thumbs.db
 Documentation/Thumbs.db
+Documentation/~$4402AManual.docx
