--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ ROMSIMM8MB.4402B/Documentation/Thumbs.db
 ROMSIMM2MB.4401A/Documentation/Thumbs.db
 ROMSIMM8MB.4402A/Documentation/Thumbs.db
 Documentation/Thumbs.db
+ROMSIMM.kicad_prl
